[package]
name = "smap"
version = "0.1.0"
authors = ["ccckmit <ccckmit@gmail.com>"]
edition = "2018"
description = "Simple-Map: HashMap for easy to use."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ccccourse/smap/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
